--- a/tf_job_mnist.yaml
+++ b/tf_job_mnist.yaml
@@ -1,22 +1,16 @@
 apiVersion: "kubeflow.org/v1alpha2"
 kind: "TFJob"
 metadata:
-  name: "dist-mnist-for-e2e-test"
+  name: "mnist-simple-oss"
 spec:
   tfReplicaSpecs:
-    PS:
-      replicas: 2
-      restartPolicy: Never
-      template:
-        spec:
-          containers:
-            - name: tensorflow
-              image: larryisdog/larry:5.0
-    Worker:
-      replicas: 4
-      restartPolicy: Never
-      template:
-        spec:
-          containers:
-            - name: tensorflow
-              image: larryisdog/larry:5.0
+    restartPolicy: Never
+    template:
+      spec:
+        containers:
+          - image: larryisdog/larry:5.0
+            name: tensorflow
+            command: ["python", "/var/tf_dist_mnist/mnist.py"]
+            args:
+
+
